# apteka-hms

./: .replit  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  replit.md  start.sh  start_production.sh
.agents/memory/: MEMORY.md  auth-setup.md  frontend-arch.md
backend/: alembic.ini  requirements.txt  run_prod.py
backend/alembic/: env.py
backend/alembic/versions/: 4108a6fb85d9_initial_schema.py
backend/app/: auth.py  config.py  database.py  main.py  schemas.py
backend/app/models/: __init__.py  case.py  clinical_photo.py  models.py  patient.py  prescription.py  prescription_item.py  visit.py
backend/app/models_backup/: case.py  clinical_photo.py  prescription.py  prescription_item.py  visit.py
backend/app/repository/: patient_repository.py  visit_repository.py
backend/app/routers/: analytics.py  appointments.py  auth.py  billing.py  expenses.py  patients.py  prescriptions.py  visits.py
backend/app/schemas/: __init__.py  patient.py  visit.py
backend/app/services/: patient_service.py  visit_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/components/layout/: AppLayout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Analytics.tsx  Appointments.tsx  Billing.tsx  Dashboard.tsx  Expenses.tsx  FollowUps.tsx  Login.tsx  PatientDetail.tsx  Patients.tsx  Payments.tsx  Prescriptions.tsx  Reports.tsx  Settings.tsx  Visits.tsx
(+10 files in other folders)
